refactor: complete order processing implementation
- Fully integrate PedidoMapper
- Extract helper methods in service
- Improve error messages
- Optimize inventory management